[package]
name = "rusty_bft"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
#bytes = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0"
serde_bytes = "0.11"
serde_repr = "0.1"
bit-vec = "0.6.3"
hmac = "0.12.1"
hex = "0.4.3"
hex-literal = "0.3.4"
sha2 = "0.10.2"
ed25519-dalek = "1.0.1"
ring = "0.16.20"
memcmp = "0.0.6"
