[package]
name = "rusty_bft"
version = "0.2.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
bit-vec = "0.6.3"
hmac = "0.12.1"
hex = "0.4.3"
hex-literal = "0.3.4"
sha2 = "0.10.2"
ed25519-dalek = "1.0.1"
ring = "0.16.20"
crossbeam-channel = "0.5.5"
rustudpdk = { path = "/mydata/UDPDK/rustudpdk", optional = true }
iptables = "*"
rand = "0.8.5"

# serde is used for the KVS messages
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
serde_bytes = "0.11"

[features]
udpdk = [ "dep:rustudpdk" ]
